--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,9 @@ flutter:
       style: italic
     - asset: assets/fonts/Product-Sans-Bold.ttf
       weight: 700
+  - family: Billabong
+    fonts:
+    - asset: assets/fonts/Billabong.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
