--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: A flutter boilerplate project created using MobX and Provider.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.18.2 <3.0.0'
 
 dependencies:
   flutter:
@@ -70,6 +70,8 @@ dependencies:
 
   google_fonts: ^2.3.2
   fluro: ^2.0.4
+  google_nav_bar: ^5.0.6
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
