--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   carousel_slider: ^4.1.1
   hidden_drawer_menu: ^3.0.1
   sidebarx: ^0.14.0
+  firebase_core: ^2.3.0
 
 dev_dependencies:
   flutter_test:
