--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,9 @@ dependencies:
   hidden_drawer_menu: ^3.0.1
   sidebarx: ^0.14.0
   firebase_core: ^2.3.0
+  firebase_auth: ^4.1.5
+  build_runner: ^2.2.0
+  mobx_codegen: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -85,9 +88,8 @@ dev_dependencies:
   # flutter packages get
   # flutter packages pub run flutter_launcher_icons:main
   flutter_launcher_icons: ^0.9.0
-  mobx_codegen: ^2.0.1+3
-  build_runner: ^1.12.2
-  analyzer: ^1.4.0
+  analyzer: ^5.2.0
+  
 
 flutter_icons:
   image_path: "assets/icons/ic_launcher.png"
