--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   firebase_auth: ^4.1.5
   build_runner: ^2.2.0
   mobx_codegen: ^2.0.2
+  password_policy: ^1.2.0
 
 dev_dependencies:
   flutter_test:
