--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,11 +74,12 @@ dependencies:
   carousel_slider: ^4.1.1
   hidden_drawer_menu: ^3.0.1
   sidebarx: ^0.14.0
-  firebase_core: ^2.3.0
-  firebase_auth: ^4.1.5
   build_runner: ^2.2.0
   mobx_codegen: ^2.0.2
   password_policy: ^1.2.0
+  cloud_firestore: ^4.2.0
+  firebase_core: ^2.4.0
+  firebase_auth: ^4.2.0
 
 dev_dependencies:
   flutter_test:
