--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_mobx: ^2.0.0
 
   # An helper to easily exposes a value using InheritedWidget without having to write one.
-  provider: ^5.0.0
+  provider: ^6.0.4
 
   # String validation and sanitization for Dart. Dart 2-compatible version of validator
   validators: ^3.0.0
@@ -66,7 +66,7 @@ dependencies:
   path_provider: ^2.0.2
 
   # for dependency injection
-  get_it: ^7.1.3
+  get_it: ^7.2.0
 
   google_fonts: ^2.3.2
   fluro: ^2.0.4
@@ -80,6 +80,7 @@ dependencies:
   cloud_firestore: ^4.2.0
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.0
+  phonenumbers: ^1.1.0
 
 dev_dependencies:
   flutter_test:
