--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.0
   phonenumbers: ^1.1.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
