--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,8 @@ dependencies:
   firebase_auth: ^4.2.0
   phonenumbers: ^1.1.0
   cached_network_image: ^3.2.3
+  firebase_storage: ^11.0.8
+  file_picker: ^5.2.4
 
 dev_dependencies:
   flutter_test:
