--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   cached_network_image: ^3.2.3
   firebase_storage: ^11.0.8
   file_picker: ^5.2.4
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
